NEW66424
libxml2 fragment parser loses prefix namespaces for attributes
https://bugs.webkit.org/show_bug.cgi?id=66424
Summary libxml2 fragment parser loses prefix namespaces for attributes
Vicki Pfau
Reported 2011-08-17 16:10:39 PDT
Created attachment 104265 [details] SVG repro When doing fragment parsing (e.g. with innerHTML) with libxml2, the prefix namespaces on context elements are not handled for attributes. This is a separate bug from https://bugs.webkit.org/show_bug.cgi?id=66423
Attachments
SVG repro (854 bytes, application/xhtml+xml)
2011-08-17 16:10 PDT, Vicki Pfau
no flags
Ahmad Saleem
Comment 1 2023-10-23 14:13:43 PDT
Ahmad Saleem
Comment 2 2023-10-23 15:12:28 PDT
(In reply to Ahmad Saleem from comment #1) > Possibly this Blink merge? > https://src.chromium.org/viewvc/blink?view=revision&revision=190360 Local build with above Blink commit fixes this test case.
Ahmad Saleem
Comment 3 2023-10-23 15:29:51 PDT
Ahmad Saleem
Comment 4 2024-05-28 03:22:41 PDT
Chromium GitHub - https://github.com/chromium/chromium/commit/651ea32658f50c666b482d2d1aaaa7d03b837134 SVN Archive of Blink is gone so above would be reference.
Ahmad Saleem
Comment 5 2024-05-28 03:40:21 PDT
Note You need to log in before you can comment on or make changes to this bug.