Fix an XML fragment parsing issue with in-scope namespace prefixes

https://bugs.webkit.org/show_bug.cgi?id=66424

Reviewed by NOBODY (OOPS!).

Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=190360

Step 2 of the XML fragment parsing algorithm specifies that the XML parser
should be fed "the string corresponding to the start tag of [the context]
element, declaring all the namespace prefixes that are in scope on that
element in the DOM, as well as declaring the default namespace (if any)
that is in scope on that element in the DOM. A namespace prefix is in
scope if the DOM lookupNamespaceURI() method on the element would return
a non-null value for that prefix."

https://html.spec.whatwg.org/#xml-fragment-parsing-algorithm

All of the in-scope namespace prefixes were added to the XMLDocumentParser's
m_prefixToNamespaceMap member by the XMLDocumentParser constructor. The
bug was fixed by having handleElementAttributes() resolve namespace prefixes
using the namespace URI from libxml2 if provided; otherwise, using the
m_prefixToNamespaceMap map.

Merge (for additional tests): https://src.chromium.org/viewvc/blink?view=revision&revision=191940

* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(handleElementAttributes):
(XMLDocumentParser::startElementNs):
* LayoutTests/fast/dom/Range/resources/svg-document-ns1.svg: Add Test Support File
* LayoutTests/fast/dom/Range/resources/svg-document-ns2.svg: Ditto
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces1.html: Add Test Case
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces1-expected.txt: Add Test Case Expectation
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces2.html: Add Test Case
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces2-expected.txt: Add Test Case Expectation
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces3.xhtml: Add Test Case
* LayoutTests/fast/dom/Range/create-contextual-fragment-namespaces3-expected.txt: Add Test Case Expectation
* LayoutTests/fast/dom/insertAdjacentHTML-namespaces.xhtml: Add Test Case
* LayoutTests/fast/dom/insertAdjacentHTML-namespaces-expected.txt: Add Test Case Expectations
* LayoutTests/fast/dom/innerHTML-namespaces.xhtml: Add Test Case
* fast/dom/innerHTML-namespaces-expected.txt: Add Test Case Expectations